# hackathon-todo

./: .gitignore  CLAUDE.md  README.md  check-prereqs.sh  pyproject.toml  todo.db
.claude/: settings.local.json
.claude/agents/: ai-chatbot-builder.md  code-generator.md  deployment-orchestrator.md  event-driven-integrator.md  spec-orchestrator.md
.claude/skills/: amend_constitution.md  auto_reschedule.md  blueprint_generator.md  dependency_lock.md  deploy_pod.md  enforce_clean_code.md  generate_crud.md  generate_helm_chart.md  generate_template.md  manage_memory.md  monorepo_setup.md  notify_user.md  observe_cluster.md  parse_intent.md  publish_event.md  scale_resources.md  subscribe_topic.md  translate_urdu.md  validate_spec.md  voice_input.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: app.py  requirements.txt  test_app.py  todo.db
components/: AuthProvider.tsx  LogoutButton.tsx  ProtectedRoute.tsx  SigninForm.tsx  SignupForm.tsx
frontend/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
history/adr/: 0001-cli-architecture-decision.md
hooks/: useAuth.ts
specs/001-add-task/: spec.md
specs/001-cli-main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mark-complete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-view-tasks/: spec.md
specs/002-delete-task/: spec.md
specs/003-update-task/: spec.md
specs/004-nextjs-auth-router/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
types/: auth.ts
(+98 files in other folders)
