[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sufiyan-sufi", email = "sufiyan@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0"
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "backend",
]
